ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocumentLink__c/LoanApplicationDocumentLink__c.object-meta.xml
<CustomObject>
    <label>Loan Application Document Link</label>
    <nameField>
        <label>Loan Application Document Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Application Document Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>