ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocumentLink__c/fields/DocURL__c.field-meta.xml
<CustomField>
    <fullName>DocURL__c</fullName>
    <formula>IF(ISBLANK(retrieveUrl__c), &apos;&apos;,
HYPERLINK( retrieveUrl__c , &quot;Open Doc&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc URL</label>
    <type>Text</type>
</CustomField>