ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocumentLink__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>