ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocumentLink__c/fields/LoanApplicationDocument__c.field-meta.xml
<CustomField>
    <fullName>LoanApplicationDocument__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application Document</label>
    <referenceTo>LoanApplicationDocument__c</referenceTo>
    <relationshipLabel>Loan Application Document Links</relationshipLabel>
    <relationshipName>Loan_Application_Document_Links</relationshipName>
    <type>Lookup</type>
</CustomField>