ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocumentLink__c/fields/OriginalFileName__c.field-meta.xml
<CustomField>
    <fullName>OriginalFileName__c</fullName>
    <label>Original File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>