ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocumentLink__c/fields/retrieveUrl__c.field-meta.xml
<CustomField>
    <fullName>retrieveUrl__c</fullName>
    <label>Retrieve Url</label>
    <type>Url</type>
</CustomField>