ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocumentLink__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Upload Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UploadStatus</valueSetName>
    </valueSet>
</CustomField>