ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocumentLink__c/fields/thumbnailUrl__c.field-meta.xml
<CustomField>
    <fullName>thumbnailUrl__c</fullName>
    <label>Thumbnail Url</label>
    <type>Url</type>
</CustomField>